# systemicons

./: Cargo.toml  index.html
examples/: hello.rs
src/: lib.rs  linux.rs  macos.rs  windows.rs
